portfolio main page updates

--- a/index.html
+++ b/index.html
@@ -218,12 +218,23 @@
 
       <div class="row">
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_bkNEsCGIVKUrlNb" target="_blank"><img class="img-responsive" src="Images/Thumbnails/RedDot.png" alt="Click the Dot" /></a>
-          <p>Click the Dot</p>
+          <a href="Simon/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Simon.png" alt="Simon Says" /></a>
+          <p>Simon Says</p>
         </div>
         <div class="col-md-4">
           <a href="GrowingBubbles.html" target="_blank"><img class="img-responsive" src="Images/Thumbnails/GrowingBubbles.png" alt="Growing Bubbles" /></a>
           <p>Growing Bubbles</p>
+        </div>
+        <div class="col-md-4">
+          <a href="https://survey.qualtrics.com/jfe/form/SV_bkNEsCGIVKUrlNb" target="_blank"><img class="img-responsive" src="Images/Thumbnails/RedDot.png" alt="Click the Dot" /></a>
+          <p>Click the Dot</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          <a href="TicTacToe/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/TicTacToe.png" alt="Tic-Tac-Toe" /></a>
+          <p>Tic-Tac-Toe</p>
         </div>
       </div>
 
