--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@
 
       <div class="row">
         <div class="col-md-4">
+          <a href="UtahWeather/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/UtahWeather.png" alt="Utah Weather" /></a>
+          <p>Utah Weather</p>
+        </div>
+        <div class="col-md-4">
           <a href="Wikipedia/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Wikipedia.png" alt="Wikipedia Search Engine" /></a>
           <p>Wikipedia Search Engine</p>
         </div>
