disable city textarea

--- a/UtahWeather/index.html
+++ b/UtahWeather/index.html
@@ -18,7 +18,7 @@
 			
 		</form>
 		<p>City:</p>
-		<textarea id="dispcity">No City</textarea>
+		<textarea id="dispcity" disabled="disabled">No City</textarea>
 		<p>Current Weather:</p>
 		<div id="weather">No weather</div>
 	</body>
