--- a/UtahWeather/index.html
+++ b/UtahWeather/index.html
@@ -10,7 +10,7 @@
 		<h1>Current Bea<span id="utah">UTAH</span>fu<span id="l">l</span><sup id="ast">*</sup> Weather</h1>
 		<h6>*Results may vary</h6>
 		<form>
-			<p id="instructions">Enter A Utah City: </p><input type="text" id="cityfield" value="">
+			<p id="instructions">Enter A Utah City: </p><input type="text" id="cityfield" autocomplete="off" value="">
 			<input id="button" type="submit" value="Submit">
 			<br>
 			<br>
