--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@
           <p>Utah Weather</p>
         </div>
         <div class="col-md-4">
+          <a href="Movies/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Movies.png" alt="The Movie Database" /></a>
+          <p>The Movie Database</p>
+        </div>
+        <div class="col-md-4">
           <a href="Wikipedia/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Wikipedia.png" alt="Wikipedia Search Engine" /></a>
           <p>Wikipedia Search Engine</p>
         </div>
