--- a/PixelMania/public/index.html
+++ b/PixelMania/public/index.html
@@ -12,7 +12,7 @@
 	
 	<body>
 		<canvas id="gameCanvas" height=500 width=700></canvas>
-		<script src="http://54.200.192.157:4000/socket.io/socket.io.js"></script>
+		<script src="js/socket.io/socket.io.js"></script>
 		<script src="js/requestAnimationFrame.js"></script>
 		<script src="js/Keys.js"></script>
 		<script src="js/Player.js"></script>
