--- a/PixelTest/public/index.html
+++ b/PixelTest/public/index.html
@@ -11,7 +11,9 @@
 	</head>
 	
 	<body>
+		<h1>Pixel Mania</h1>
 		<canvas id="gameCanvas" height=500 width=700></canvas>
+
 		<script src="javascripts/socket.io.js"></script>
 		<script src="javascripts/requestAnimationFrame.js"></script>
 		<script src="javascripts/Keys.js"></script>
