--- a/comments/public/index.html
+++ b/comments/public/index.html
@@ -2,18 +2,20 @@
 <html>
 	<head>
   		<title>Comments!</title>
-		<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
 		<script src="javascripts/comments.js"></script>
 	</head>
 
 	<body>
-		<form id="commentForm" action="">
-  			<label for="name">Name: </label><input type="text" id="Name" placeholder="Name"><br>
-  			<label for="comment">comment: </label><input type="text" id="Comment" placeholder="Comment"><br>
+		<form id="commentForm" class="form-group" action="">
+  			<label for="name">Name: </label><input type="text" id="Name" class="form-control" placeholder="Name"><br>
+  			<label for="comment">comment: </label><input type="text" id="Comment" class="form-control" placeholder="Comment"><br>
 		</form>
 
-		<button id="serialize">Serialize form values</button>
-		<button id="getThem">Get Comments</button>
+		<button id="serialize" class="btn btn-default">Serialize form values</button>
+		<button id="getThem" class="btn btn-default">Get Comments</button>
+
 		<div id="json"></div>
 		<div id="done"></div>
 		<div id="comments"></div>
