--- a/comments/public/index.html
+++ b/comments/public/index.html
@@ -8,9 +8,15 @@
 	</head>
 
 	<body>
-		<form id="commentForm" class="form-group" action="">
-  			<label for="name">Name: </label><input type="text" id="Name" class="form-control" placeholder="Name"><br>
-  			<label for="comment">comment: </label><input type="text" id="Comment" class="form-control" placeholder="Comment"><br>
+		<form id="commentForm" class="form-horizontal" action="">
+			<div class="form-group">
+	  			<label for="name">Name: </label>
+	  			<input type="text" id="Name" class="form-control" placeholder="Name"><br>
+	  		</div>
+	  		<div class="form-group">
+	  			<label for="comment">comment: </label>
+	  			<input type="text" id="Comment" class="form-control" placeholder="Comment"><br>
+	  		</div>
 		</form>
 
 		<button id="serialize" class="btn btn-default">Serialize form values</button>
