--- a/comments/public/index.html
+++ b/comments/public/index.html
@@ -10,12 +10,16 @@
 	<body>
 		<form id="commentForm" class="form-horizontal" action="">
 			<div class="form-group">
-	  			<label for="name">Name: </label>
-	  			<input type="text" id="Name" class="form-control" placeholder="Name"><br>
+	  			<label for="name" class="col-sm-2 control-label">Name: </label>
+	  			<div class="col-sm-10">
+	  				<input type="text" id="Name" class="form-control" placeholder="Name"><br>
+	  			</div>
 	  		</div>
 	  		<div class="form-group">
-	  			<label for="comment">comment: </label>
-	  			<input type="text" id="Comment" class="form-control" placeholder="Comment"><br>
+	  			<label for="comment" class="col-sm-2 control-label">comment: </label>
+	  			<div class="col-sm-10">
+	  				<input type="text" id="Comment" class="form-control" placeholder="Comment"><br>
+	  			</div>
 	  		</div>
 		</form>
 
