--- a/comments/public/index.html
+++ b/comments/public/index.html
@@ -8,6 +8,7 @@
 	</head>
 
 	<body>
+
 		<form id="commentForm" class="form-horizontal" action="">
 			<div class="form-group">
 	  			<label for="name" class="col-sm-2 control-label">Name: </label>
@@ -23,11 +24,14 @@
 	  		</div>
 		</form>
 
-		<button id="serialize" class="btn btn-default">Serialize form values</button>
-		<button id="getThem" class="btn btn-default">Get Comments</button>
+		<div id="someButtons">
+			<button id="serialize" class="btn btn-default">Serialize form values</button>
+			<button id="getThem" class="btn btn-default">Get Comments</button>
+		</div>
 
 		<div id="json"></div>
 		<div id="done"></div>
 		<div id="comments"></div>
+
 	</body>
 </html>
