--- a/comments/public/index.html
+++ b/comments/public/index.html
@@ -5,6 +5,7 @@
   		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 		<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
 		<script src="javascripts/comments.js"></script>
+		<link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
 	</head>
 
 	<body>
