--- a/comments/public/index.html
+++ b/comments/public/index.html
@@ -33,10 +33,10 @@
 		</div>
 
 		<div id="afterSubmit">
-			<div id="json"></div>
+			<div id="json">Your JSON stringified comment: (none yet)</div>
 			<div id="done"></div>
 		</div>
-		
+
 		<div id="comments"></div>
 
 	</body>
