--- a/comments/public/index.html
+++ b/comments/public/index.html
@@ -25,12 +25,13 @@
 	  				<input type="text" id="comment" class="form-control" placeholder="Comment"><br>
 	  			</div>
 	  		</div>
-		</form>
+		
+			<div id="someButtons">
+				<input id="serialize" type="submit" class="btn btn-default" value="Submit Comment" />
+				<button id="getThem" class="btn btn-default">Get Comments</button>
+			</div>
 
-		<div id="someButtons">
-			<button id="serialize" class="btn btn-default">Submit Comment</button>
-			<button id="getThem" class="btn btn-default">Get Comments</button>
-		</div>
+		</form>
 
 		<div id="afterSubmit">
 			<div id="json">Your JSON stringified comment: (none yet)</div>
