--- a/comments/public/index.html
+++ b/comments/public/index.html
@@ -28,7 +28,7 @@
 		
 			<div id="someButtons">
 				<input id="serialize" type="submit" class="btn btn-default" value="Submit Comment" />
-				<button id="getThem" class="btn btn-default">Get Comments</button>
+				<button id="getThem" type="button" class="btn btn-default">Get Comments</button>
 			</div>
 
 		</form>
