--- a/comments/public/index.html
+++ b/comments/public/index.html
@@ -12,7 +12,7 @@
 
 		<h1>Comment Board</h1>
 
-		<form id="commentForm" class="form-horizontal" action="">
+		<form id="commentForm" class="form-horizontal" action="javascript:void(0);">
 			<div class="form-group">
 	  			<label for="name" class="col-sm-2 control-label">Name: </label>
 	  			<div class="col-sm-10">
