--- a/CorporateBS/public/index.html
+++ b/CorporateBS/public/index.html
@@ -23,7 +23,7 @@
                 <img class="people" src="images/man1.gif" />
                 <img class="people" src="images/man2.gif" />
                 <form id="firstPageForm" action="javascript:void(0);">
-                    <input type="text" placeholder="Your Name Here" autofocus /><br/><br/>
+                    <input type="text" id="name" placeholder="Your Name Here" autofocus /><br/><br/>
                     <input type="submit" value="Start Conversation" />
                 </form>
             </div>
