--- a/CorporateBS/public/index.html
+++ b/CorporateBS/public/index.html
@@ -39,7 +39,7 @@
                 <img class="people" src="images/man1.gif" />
                 <img class="people" src="images/man2.gif" />
                 <form id="secondPageForm" action="javascript:void(0);">
-                    <input type="submit" value="Next" />
+                    <input type="submit" value="Next" autofocus />
                 </form>
             </div>
 
@@ -54,7 +54,7 @@
                 <img class="people" src="images/man1.gif" />
                 <img class="people" src="images/man2.gif" />
                 <form id="thirdPageForm" action="javascript:void(0);">
-                    <input type="submit" value="Next" />
+                    <input type="submit" value="Next" autofocus />
                 </form>
             </div>
 
@@ -64,7 +64,7 @@
                 </div>
                 <img class="peopleFinal" src="images/synergy.gif" />
                 <form id="fourthPageForm" action="javascript:void(0);">
-                    <input type="submit" value="Start A New Conversation" />
+                    <input type="submit" value="Start A New Conversation" autofocus />
                 </form>
             </div>
 
