--- a/CorporateBS/public/index.html
+++ b/CorporateBS/public/index.html
@@ -24,7 +24,7 @@
                 <img class="people" src="images/man2.gif" />
                 <form id="firstPageForm" action="javascript:void(0);">
                     <input type="text" id="name" placeholder="Your Name Here" autofocus /><br/><br/>
-                    <input type="submit" value="Start Conversation" />
+                    <input type="submit" id="submitPage1" value="Start Conversation" />
                 </form>
             </div>
 
@@ -39,7 +39,7 @@
                 <img class="people" src="images/man1.gif" />
                 <img class="people" src="images/man2.gif" />
                 <form id="secondPageForm" action="javascript:void(0);">
-                    <input type="submit" value="Next" autofocus />
+                    <input type="submit" id="submitPage2" value="Next" autofocus />
                 </form>
             </div>
 
@@ -54,7 +54,7 @@
                 <img class="people" src="images/man1.gif" />
                 <img class="people" src="images/man2.gif" />
                 <form id="thirdPageForm" action="javascript:void(0);">
-                    <input type="submit" value="Next" autofocus />
+                    <input type="submit" id="submitPage3" value="Next" autofocus />
                 </form>
             </div>
 
@@ -64,7 +64,7 @@
                 </div>
                 <img class="peopleFinal" src="images/synergy.gif" />
                 <form id="fourthPageForm" action="javascript:void(0);">
-                    <input type="submit" value="Start A New Conversation" autofocus />
+                    <input type="submit" id="submitPage4" value="Start A New Conversation" autofocus />
                 </form>
             </div>
 
