--- a/MongoDBreakout/public/index.html
+++ b/MongoDBreakout/public/index.html
@@ -12,6 +12,7 @@
         <script src="javascripts/app/controllers/authenticateController.js" type="text/javascript"></script>
         <script src="javascripts/app/controllers/gameController.js" type="text/javascript"></script>
         <script src="javascripts/app/controllers/highscoresController.js" type="text/javascript"></script>
+        <script src="javascripts/Keys.js"></script>
     </head>
   
     <body>
