--- a/angularNodeMongoPoki/public/index.html
+++ b/angularNodeMongoPoki/public/index.html
@@ -5,11 +5,18 @@
 <script src="./javascripts/app.js"></script>
 <link rel="stylesheet" type="text/css" href="./stylesheets/style.css">
   <meta charset="utf-8">
-  <title>Node api tutorial</title>
+  <title>Pokemon</title>
 </head>
 <body>
 
   <div id='app' ng-app='app' ng-controller='mainCtrl'>
+
+    <h1> Enter A New Poki</h1>
+    <form id="newPoki" ng-submit="addPoki()">
+      Name: <input type="text" ng-model="Name" value=""><br>
+      Url: <input type="url" ng-model="Url" value=""><br>
+      <input type="submit" value="Submit">
+    </form>
 
     <div ng-if='!pokemon.length' class='no-pokemon center stretch'>
       <h1 class='h1'>
