--- a/MongoDBreakout/public/index.html
+++ b/MongoDBreakout/public/index.html
@@ -4,6 +4,7 @@
         <title>MongoDBreakout</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link href="stylesheets/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
         <link href="stylesheets/style.css" rel="stylesheet" type="text/css">
         <script src="javascripts/jquery-1.12.0.min.js" type="text/javascript"></script>
         <script src="javascripts/angular.js" type="text/javascript"></script>
