--- a/Dishes/public/index.html
+++ b/Dishes/public/index.html
@@ -17,7 +17,8 @@
 				</div>
 
 				<form ng-submit="addDish()" style = "margin-top30px;">
-					<input type="text" ng-model="formContent"></input>
+					Dish Name: <input type="text" ng-model="name"></input><br/>
+					Type of Dish: <input type="text" ng-model="type"></input><br/>
 					<button type="submit">Add Dish</button>
 				</form>
 
