--- a/BestMusic/public/index.html
+++ b/BestMusic/public/index.html
@@ -16,13 +16,55 @@
 					<h1>Best Music</h1>
 				</div>
 
-				<form ng-submit="addSong()" style = "margin-top30px;">
+				<form ng-submit="addSong()" class="form-horizontal" style="margin-top: 30px;">
+
+					<div class="form-group">
+					    <label for="title" class="col-sm-2 control-label">Song Title</label>
+					    <div class="col-sm-10">
+					      	<input type="text" class="form-control" id="title" ng-model="title"/>
+					    </div>
+					</div>
+
+					<div class="form-group">
+					    <label for="artist" class="col-sm-2 control-label">Artist</label>
+					    <div class="col-sm-10">
+					      	<input type="text" class="form-control" id="artist" ng-model="artist"/>
+					    </div>
+					</div>
+
+					<div class="form-group">
+					    <label for="album" class="col-sm-2 control-label">Album</label>
+					    <div class="col-sm-10">
+					      	<input type="text" class="form-control" id="album" ng-model="album"/>
+					    </div>
+					</div>
+
+					<div class="form-group">
+					    <label for="genre" class="col-sm-2 control-label">Genre</label>
+					    <div class="col-sm-10">
+					      	<input type="text" class="form-control" id="genre" ng-model="genre"/>
+					    </div>
+					</div>
+
+					<div class="form-group">
+					    <label for="art" class="col-sm-2 control-label">Album Artwork URL</label>
+					    <div class="col-sm-10">
+					      	<input type="text" class="form-control" id="art" ng-model="art"/>
+					    </div>
+					</div>
+					<!--
 					Song Title: <input type="text" ng-model="title"></input><br/>
 					Artist: <input type="text" ng-model="artist"></input><br/>
 					Album: <input type="text" ng-model="album"></input><br/>
 					Genre: <input type="text" ng-model="genre"></input><br/>
 					Album Artwork URL: <input type="text" ng-model="art"></input><br/>
-					<button type="submit">Add Song</button>
+					<button type="submit" class="btn btn-default">Add Song</button>
+					-->
+					<div class="form-group">
+    					<div class="col-sm-offset-2 col-sm-10">
+							<button type="submit" class="btn btn-default">Add Song</button>
+						</div>
+					</div>
 				</form>
 
 				<div ng-repeat="song in songs | orderBy: ['genre', '-upvotes']">
