--- a/BestMusic/public/index.html
+++ b/BestMusic/public/index.html
@@ -10,7 +10,7 @@
 	<body ng-app="song" ng-controller="MainCtrl">
 	
 		<div class="row">
-			<div class="col-md-6 col-md-offset-3">
+			<div class="col-md-12">
 				
 				<div class="page-header"> 
 					<h1>Best Music</h1>
@@ -52,14 +52,7 @@
 					      	<input type="text" class="form-control" id="art" ng-model="art"/>
 					    </div>
 					</div>
-					<!--
-					Song Title: <input type="text" ng-model="title"></input><br/>
-					Artist: <input type="text" ng-model="artist"></input><br/>
-					Album: <input type="text" ng-model="album"></input><br/>
-					Genre: <input type="text" ng-model="genre"></input><br/>
-					Album Artwork URL: <input type="text" ng-model="art"></input><br/>
-					<button type="submit" class="btn btn-default">Add Song</button>
-					-->
+
 					<div class="form-group">
     					<div class="col-sm-offset-2 col-sm-10">
 							<button type="submit" class="btn btn-default">Add Song</button>
@@ -68,8 +61,10 @@
 				</form>
 
 				<div ng-repeat="song in songs | orderBy: ['genre', '-upvotes']">
-					<span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(song)"></span>
+					<div class="oneSong">
+						<span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(song)"></span>
 					"{{song.title}}" by {{song.artist}} as heard on <i>{{song.album}}</i> ({{song.genre}}) <img ng-src='{{song.art}}' height=50 /> - upvotes: {{song.upvotes}}
+					</div>
 				</div>
 
 			</div>
