make form look pretty

--- a/BestMusic/public/index.html
+++ b/BestMusic/public/index.html
@@ -2,7 +2,8 @@
 
 	<head>
 		<title>Best Music</title>
-		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="stylesheets/style.css" type="text" rel="stylesheet" />
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
 		<script src="javascripts/app.js"></script>
 	</head>
