make form look pretty

--- a/BestMusic/public/index.html
+++ b/BestMusic/public/index.html
@@ -61,7 +61,7 @@
 					</div>
 				</form>
 
-				<div ng-repeat="song in songs | orderBy: ['genre', '-upvotes']">
+				<div ng-repeat="song in songs | orderBy: ['genre', '-upvotes', 'artist', 'album', 'title']">
 					<div class="oneSong">
 						<span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(song)"></span>
 					<b>"{{song.title}}"</b> by {{song.artist}} as heard on <i>{{song.album}}</i> ({{song.genre}}) <img ng-src='{{song.art}}' height=50 /> - upvotes: {{song.upvotes}}
