pixel test adding ball stuff back in slowly

--- a/PixelTest/public/index.html
+++ b/PixelTest/public/index.html
@@ -18,7 +18,7 @@
 		<script src="javascripts/requestAnimationFrame.js"></script>
 		<script src="javascripts/Keys.js"></script>
 		<script src="javascripts/Player.js"></script>
-		<!--<script src="javascripts/Ball.js"></script>-->
+		<script src="javascripts/Ball.js"></script>
 		<script src="javascripts/game.js"></script>
 		<script>
 			// Initialize the game
