adding food to the game

--- a/PixelTest/public/index.html
+++ b/PixelTest/public/index.html
@@ -19,6 +19,7 @@
 		<script src="javascripts/Keys.js"></script>
 		<script src="javascripts/Player.js"></script>
 		<script src="javascripts/Ball.js"></script>
+		<script src="javascripts/Food.js"></script>
 		<script src="javascripts/game.js"></script>
 		<script>
 			// Initialize the game
