--- a/Imgur/public/index.html
+++ b/Imgur/public/index.html
@@ -4,6 +4,7 @@
         <title>Imgur Search</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link href="stylesheets/style.css" rel="stylesheet" type="text/css">
+        <script src="javascripts/script.js" type="text/javascript"></script>
     </head>
   
     <body>
@@ -12,17 +13,17 @@
         <h3>Description</h3>
         <p>This microservice allows you to access Imgur's API to search for images in their gallery.</p>
 
-        <h3>Instructions</h3>
-        <p>Add "/new/" in the address bar, followed by the complete address of an actual website.<br/>
-        For example, add "/new/http://google.com" to the end of this page's URL and hit the enter key.</p>
+        <h3>Search</h3>
+        <p>Add "/search/" in the address bar, followed by your search terms.<br/>
+        To get the second page of results, add ?offset=1 to the query string.</p>
         
-        <p>This will return a lookup number that is associated with the web address you entered.<br/>
-        Take that number and paste it at the end of this page's URL along with "/go/" at the end.<br/>
-        For example, add "/go/7" into your address bar and hit enter to see the redirect in action!</p>
+        <h3>History</h3>
+        <p>Add "/history" in the address bar to see the last 10 searches that were made.</p>
 
         <h3>Example URLs</h3>
-        <p><strong>Adding a new URL:</strong> <span class="currentAddress"></span>new/http://google.com</p>
-        <p><strong>Using the shortened URL:</strong> <span class="currentAddress"></span>go/7</p>
+        <p><strong>Searching for "cats":</strong> <span class="currentAddress"></span>search/cats</p>
+        <p><strong>Searching for the third page of "cats":</strong> <span class="currentAddress"></span>search/cats?offset=2</p>
+        <p><strong>Search history:</strong> <span class="currentAddress"></span>history</p>
 
         <script src="javascripts/script.js" type="text/javascript"></script>
     </body>
