updating web portfolio info

--- a/index.html
+++ b/index.html
@@ -257,7 +257,8 @@
     <div class="container" id="about">
       <h3>ABOUT</h3>
       <div class="row">
-      <p>Tyler Hawkins is a senior at Brigham Young University studying Statistics and Computer Science. He's originally from Atlanta, GA but loves the mountains here in the West. He enjoys web development and design and can often be found coding in his free time. His hobbies include snowboarding, biking, skydiving, fire juggling, reading, playing drums and keyboard, and spending time with his wife.</p>
+      <p>I have a bachelor's degree in Statistics with a minor in Psychology from Brigham Young University. Mid-way through my undergraduate studies, I took an interest in web development and began teaching myself through online courses such as Udemy, Pluralsight, Codecademy, and FreeCodeCamp. I took a few computer science classes at BYU as well to learn the MEAN stack and excelled at those. I began building web applications in my free time to gain experience and then landed a development job at Qualtrics on our engineering services team.</p>
+      <p>My hobbies include snowboarding, biking, skydiving, fire juggling, reading, playing drums and keyboard, and spending time with my beautiful wife and daughter.</p>
       </div>
     </div>
 
@@ -274,26 +275,13 @@
       <h4 id="hard">HARD SKILLS</h4>
 
       <div class="row">
-        <p><span>Front End: </span>HTML5, CSS3, JavaScript, jQuery, Bootstrap, Wordpress</p>
-        <p><span>Back End: </span>PHP, Python, Ruby, C++</p>
-        <p><span>Data Manipulation: </span>SQL, R, SAS</p>
-        <p><span>Other: </span>REST API, Bash, Git, myPHPAdmin, mySQL Databases</p>
+        <p>I'm most fluent in the MEAN stack (MongoDB, Express, Node.js, AngularJS) and love to develop full stack applications. I also have experience working with PHP and MySQL backends to create RESTful API services. When not working with AngularJS on the frontend, I'm well-versed in vanilla JavaScript, jQuery, and jQuery UI.</p>
       </div>
 
       <h4 id="soft">SOFT SKILLS</h4>
 
       <div class="row" id="softRow">
-        <ul>
-          <li>Self-motivated</li>
-          <li>Problem solver</li>
-          <li>Great communciator</li>
-          <li>Hard worker</li>
-          <li>Quick learner</li>
-          <li>Team player</li>
-          <li>Dependable</li>
-          <li>Detail-oriented</li>
-          <li>Driven</li>
-        </ul>
+        <p>I'm a driven, self-motivated, lifelong learner. I'm always reading something new or watching online courses to further expand my skillset. I'm dependable, a great communicator with both technical and non-technical people, can meet and beat project timelines, and am a team player.</p>
       </div>
 
     </div>
@@ -316,13 +304,13 @@
       <div class="row">
         <p>WEB DESIGNER - DESIGN TEAM</p>
         <p>Qualtrics</p>
-        <p>June 2015 - present</p>
+        <p>June 2015 - October 2015</p>
       </div>
 
       <div class="row">
         <p>PRODUCT SPECIALIST - TECHNICAL SUPPORT</p>
         <p>Qualtrics</p>
-        <p>April 2014 - October 2015</p>
+        <p>April 2014 - June 2015</p>
       </div>
     </div>
 
@@ -332,7 +320,7 @@
     <div class="container">
         <div class="footer">
           <p>Hand-coded by Tyler Hawkins</p>
-          <p>&copy; 2016</p>
+          <p>&copy; 2016-2017</p>
         </div>
     </div>
 
